// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Price Extra Prop 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <span
      className="css-15xypbi-Price"
      data-price-currency="EUR"
      data-price-value={10.9}
      data-sample="yes"
    >
      10
      <span
        className="css-1y4apvm-Price"
      >
        , 
        90
         
        €
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Price No Color 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <span
      className="css-f18a6v-Price"
      data-price-currency="EUR"
      data-price-value={10.9}
    >
      10
      <span
        className="css-1x4f4oa-Price"
      >
        , 
        90
         
        €
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Price Primary 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <span
      className="css-15xypbi-Price"
      data-price-currency="EUR"
      data-price-value={10.9}
    >
      10
      <span
        className="css-1y4apvm-Price"
      >
        , 
        90
         
        €
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Price Prix En Franc Suisse 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <span
      className="css-15xypbi-Price"
      data-price-currency="CHF"
      data-price-value={10.9}
    >
      10
      <span
        className="css-1y4apvm-Price"
      >
        , 
        90
         
        CHF
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Price Prix En Pounds 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <span
      className="css-15xypbi-Price"
      data-price-currency="GBP"
      data-price-value={10.9}
    >
      10
      <span
        className="css-1y4apvm-Price"
      >
        , 
        90
         
        £
      </span>
    </span>
  </div>
</div>
`;
